fix: Line numbers now align to code (#9)

--- a/src/theme/main.less
+++ b/src/theme/main.less
@@ -4,6 +4,18 @@
 .block.code {
   > .code-block-wrapper {
     &.edit {
+      &.dark {
+        > textarea {
+          caret-color: #fff;
+        }
+      }
+
+      &.light {
+        > textarea {
+          caret-color: #657b83;
+        }
+      }
+
       > textarea {
         overflow: hidden;
         width: 100%;
