--- a/src/theme/theme-dark.less
+++ b/src/theme/theme-dark.less
@@ -4,6 +4,7 @@ https://prismjs.com/download.html#themes=prism-twilight&languages=markup+css+cli
   code[class*='language-'],
   pre[class*='language-'] {
     background: 0 0;
+    caret-color: #fff;
     color: #fff;
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
     font-size: 1em;
@@ -11,7 +12,6 @@ https://prismjs.com/download.html#themes=prism-twilight&languages=markup+css+cli
     -moz-hyphens: none;
     -ms-hyphens: none;
     hyphens: none;
-    line-height: 1.5;
     -moz-tab-size: 4;
     -o-tab-size: 4;
     tab-size: 4;
