--- a/src/theme/theme-light.less
+++ b/src/theme/theme-light.less
@@ -10,7 +10,6 @@ https://prismjs.com/download.html#themes=prism-solarizedlight&languages=markup+c
     -moz-hyphens: none;
     -ms-hyphens: none;
     hyphens: none;
-    line-height: 1.5;
     -moz-tab-size: 4;
     -o-tab-size: 4;
     tab-size: 4;
